добавлеие функционала на кнопки

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <div class="stroka">
             <div class="result">
-                 <output name="result">0</output>
+                 <output name="result" data-id="output">0</output>
              </div>
          </div>
 
@@ -28,30 +28,30 @@
         </div>
 
         <div class="stroka">
-            <button class="number">1</button>
-            <button class="number">2</button>
-            <button class="number">3</button>
+            <button class="number btn-number"  data-value="1">1</button>
+            <button class="number btn-number"  data-value="2">2</button>
+            <button class="number btn-number"  data-value="3">3</button>
             <button class="oper"><i class="fa fa-times" aria-hidden="true"></i></button>
         </div>
 
         <div class="stroka">
-            <button class="number">4</button>
-            <button class="number">5</button>
-            <button class="number">6</button>
-            <button class="oper"><i class="fa fa-minus" aria-hidden="true"></i></button>
+            <button class="number btn-number" data-value="4">4</button>
+            <button class="number btn-number" data-value="5">5</button>
+            <button class="number btn-number" data-value="6">6</button>
+            <button class="oper btn-math"  data-value="minus"><i class="fa fa-minus" aria-hidden="true"></i></button>
         </div>
 
         <div class="stroka">
-            <button class="number">7</button>
-            <button class="number">8</button>
-            <button class="number">9</button>
-            <button class="oper"><i class="fa fa-plus" aria-hidden="true"></i></button>
+            <button class="number btn-number" data-value="7">7</button>
+            <button class="number btn-number" data-value="8">8</button>
+            <button class="number btn-number" data-value="9">9</button>
+            <button class="oper btn-math"  data-value="plus"><i class="fa fa-plus" aria-hidden="true"></i></button>
         </div>
 
         <div class="stroka">
-            <button class="number">0</button>
+            <button class="number btn-number" data-value="0">0</button>
             <button class="oper"><span class="select">,</span></button>
-            <button class="ravno"><span class="select">=</span></button>
+            <button class="ravno btn-math" data-value="finall"><span class="select">=</span></button>
         </div>
 
     </div>
