Добавление функционала на кнопки. умножение, деление, сложение, вычитание, очистка, ровно

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     </div>
 
     <div class="center" >
-
         <div class="stroka">
             <div class="result">
                  <output name="result" data-id="output">0</output>
@@ -22,16 +21,16 @@
          </div>
 
         <div class="stroka">
-            <button class="oper"><i class="fa fa-eraser" aria-hidden="true"></i></button>
-            <button class="ravno"><span class="select">С</span></button>
-            <button class="oper"><span class="select">:</span></button>
+            <button class="oper btn-math" data-value="removalAll"><i class="fa fa-eraser" aria-hidden="true"></i></button>
+            <button class="ravno btn-math" data-value="removal"><span class="select">С</span></button>
+            <button class="oper btn-math" data-value="delenie"><span class="select">:</span></button>
         </div>
 
         <div class="stroka">
             <button class="number btn-number"  data-value="1">1</button>
             <button class="number btn-number"  data-value="2">2</button>
             <button class="number btn-number"  data-value="3">3</button>
-            <button class="oper"><i class="fa fa-times" aria-hidden="true"></i></button>
+            <button class="oper btn-math" data-value="umnogenie"><i class="fa fa-times" aria-hidden="true"></i></button>
         </div>
 
         <div class="stroka">
@@ -51,7 +50,7 @@
         <div class="stroka">
             <button class="number btn-number" data-value="0">0</button>
             <button class="oper"><span class="select">,</span></button>
-            <button class="ravno btn-math" data-value="finall"><span class="select">=</span></button>
+            <button class="ravno btn-math" data-value="finally"><span class="select">=</span></button>
         </div>
 
     </div>
